--- a/src/app/components/intro/intro.component.media-queries.scss
+++ b/src/app/components/intro/intro.component.media-queries.scss
@@ -1,5 +1,37 @@
 @import "../../../styles/mixins";
 
+@media (max-height: 890px) and (min-width: 1200px) {
+  .intro {
+    .left {
+      max-width: 50%;
+      max-height: 100%;
+
+      .shapeWrapper {
+        top: 0;
+        left: 0;
+        width: 90%;
+        height: 90%;
+      }
+
+      .profilePicture {
+        bottom: 0;
+        left: 0;
+        width: 90%;
+        height: auto;
+        min-height: unset;
+      }
+
+      .shapeOne,
+      .shapeTwo {
+        bottom: 50px;
+        left: 0;
+        width: 90%;
+        height: 90%;
+      }
+    }
+  }
+}
+
 @media (max-width: 1200px) {
   .intro {
     .left {
